Cherry-pick r267521. rdar://problem/70023915

REGRESSION (iOS/Safari 14): MediaRecorder produces invalid video files
    https://bugs.webkit.org/show_bug.cgi?id=216832
    <rdar://problem/69377550>

    Reviewed by Eric Carlson.

    Start the audio and video timestamps at zero.
    Compute the audio timestamp based on the sample count and the video timestamp based
    on the time at which the video sample is received.

    Covered by manually testing Safari generated videos on VLC, Chrome and Firefox.

    * platform/mediarecorder/cocoa/MediaRecorderPrivateWriterCocoa.h:
    * platform/mediarecorder/cocoa/MediaRecorderPrivateWriterCocoa.mm:
    (WebCore::MediaRecorderPrivateWriter::initialize):
    (WebCore::MediaRecorderPrivateWriter::startAssetWriter):
    (WebCore::copySampleBufferWithCurrentTimeStamp):
    (WebCore::MediaRecorderPrivateWriter::appendVideoSampleBuffer):
    (WebCore::createAudioSampleBuffer):
    (WebCore::MediaRecorderPrivateWriter::appendAudioSampleBuffer):

    Canonical link: https://commits.webkit.org/229703@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@267521 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/228499.208@safari-610-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-610-branch@268090 268f45cc-cd09-0410-ab3c-d52691b4dbfc